--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                           <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="project/projects_python.html"><img src="img/portfolio_2.jpg" alt="proyecto2"></a>
+                                    <a href="project/building.html"><img src="img/portfolio_2.jpg" alt="proyecto2"></a>
                                 </div>
                             </div>
                         </div>
