--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                           <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="project/building.html"><img src="img/portfolio_2.jpg" alt="proyecto2"></a>
+                                    <a href="project/projects_python.html"><img src="img/portfolio_2.jpg" alt="proyecto2"></a>
                                 </div>
                             </div>
                         </div>
@@ -345,47 +345,6 @@
                          </div>
                          <!-- CONTACTO INFO ITEM FINAL-->  
                         </div>
-                        <h3 class="contact-title padd-15">¿Quieres dejarme un mensaje?</h3>
-                        <h4 class="contact-sub-title padd-15">Aquí contacto directo.</h4>
-                        <!-- CONTACTO FORMULARIO--> 
-                        <form method="post" action="#">
-                        <div class="row">
-                            <div class="contact-form padd-15">
-                                <div class="row">
-                                    <div class="form-item col-6 padd-15">
-                                        
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" required="" pattern="[a-zA-ZÀ-ÿ\u00f1\u00d1]+(\s*[a-zA-ZÀ-ÿ\u00f1\u00d1]*)*[a-zA-ZÀ-ÿ\u00f1\u00d1]+" placeholder="Nombre">
-                                        </div>
-                                    </div>
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" required="" placeholder="Email">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-12 padd-15">
-                                        <div class="form-group">
-                                            <input type="Subject" class="form-control" placeholder="Asunto">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-12 padd-15">
-                                        <div class="form-group">
-                                            <textarea name="" class="form-control" required="" placeholder="Mesagge"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-12 padd-15">
-                                        <button type="submit" class="btn" >Enviar Mensaje</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        </form>
                     </div>
                  </section>
                  <!-- CONTACTO SECTION FINAL-->
