--- a/index.html
+++ b/index.html
@@ -319,14 +319,14 @@
                          <!-- CONTACTO INFO ITEM INICIO-->
                          <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
-                            <h4>Llamame</h4>
+                            <h4>Llámame</h4>
                             <p>+34 622 95 36 97</p>
                          </div>
                          <!-- CONTACTO INFO ITEM FINAL-->      
                           <!-- CONTACTO INFO ITEM INICIO-->
                           <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Ubicacion</h4>
+                            <h4>Ubicación</h4>
                             <p>Bornos, Cádiz</p>
                          </div>
                          <!-- CONTACTO INFO ITEM FINAL-->
