--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         cuando terminara la ESO en concreto el grado medio de sistemas microinformáticas y redes, además empecé a hacer algunos diseños webs y 
                                         empecé a tocar HTML y CSS para maquetar el diseño.
                                         </p><br />
-                                        <p>En la actualidad estoy trabajando como Developer Junior en NTT Data en el área de Big Data-BI una de las tecnologías más punteras y tomando cada vez más importancias,
+                                        <p>En la actualidad estoy trabajando como Data Developer en NTT Data en el área de Big Data-BI una de las tecnologías más punteras y tomando cada vez más importancias,
                                             recientemente he terminado mis estudios superiores de informática en la rama de administración de sistemas informáticos y redes, después de haber estudiado el grado medio 
                                             de sistemas microinformáticas y redes, me di cuenta de que quería seguir estudiando esta rama, ya que salí muy satisfecho al terminar mis estudios sobre todo con la 
                                             administración de sistemas, el maquetado y diseño web. Y he sentido esa misma satisfacción al terminar ASIR, con ganas de afrontar nuevos retos.
