--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <div class="personal-info padd-15" >
                                         <div class="row">
                                             <div class="info-item padd-15">
-                                                <p>Edad: <span>20 años</span></p>
+                                                <p>Edad: <span>21 años</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Ubicación: <span>Bornos, Cádiz</span></p>
@@ -106,14 +106,14 @@
                                     <div class="skills padd-15">
                                         <div class="row">
                                             <div class="skill-item padd-15">
-                                                <h5>JS</h5>
+                                                <h5>EXCEL</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width: 20%;"></div>
                                                     <div class="skill-percent">20%</div>
                                                 </div>
                                             </div>
                                             <div class="skill-item padd-15">
-                                                <h5>PHP</h5>
+                                                <h5>PYSPARK</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width: 12%;"></div>
                                                     <div class="skill-percent">12%</div>
@@ -228,13 +228,15 @@
                                                         <h3 class="timeline-date">
                                                             <i class="fa fa-calendar"></i> 2023 Junio - Actualidad 
                                                         </h3>
-                                                        <h4 class="timeline-title">Centers Junior Big Data Developer</h4>
+                                                        <h4 class="timeline-title">Centers Data Developer</h4>
                                                         <h5 class="timeline-business"><i class="fa fa-building" aria-hidden="true"></i>NTT DATA Europe & Latam (Contrato Indefinido)</h5>
                                                         <p class="timeline-text">
-                                                         Me encuentro realizando las siguientes labores:
+                                                         En proyecto de BBVA de ingesta en la plataforma Datio
                                                         <div class="modules" style="color:  var(--text-black-700);">
-                                                            <li>Ingestion de tablas y datos.</li>
-                                                            <li>Gestion con PySpark de datos y DataFrames.</li>
+                                                            <li>Uso de metodología agile (Kanban) en plataforma Jira.</li>
+                                                            <li>Ingesta y transformación de datos con el uso de la librería de Kirby.</li>
+							    <li>Uso de herramientas de integración y distribución continuas (CI/CD) mediante Bitbucket (Git), Jenkins, JFrog.</li>
+                                                            <li>Calidad y gobierno del dato mediante la librería de Hammurabi.</li>
                                                         </div>
                                                         </p>
                                                     </div>
