--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="content/curriculum_daniel_alvarez.pdf" target="_blank" class="btn">Descargar CV</a>
+                                                <a href="content/CV Daniel Alvarez Peral.pdf" target="_blank" class="btn">Descargar CV</a>
                                             </div>
                                         </div>
                                     </div>
